--- a/html/novidades2.html
+++ b/html/novidades2.html
@@ -2,10 +2,8 @@
 <html lang="pt-br">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-
 <head>
-
-    <title>Jonas Botelho - novidades</title>
+    <title>Jonas Botelho - novida10</title>
     <link rel="stylesheet" href="../css/jonasbotelho2.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
