mais um detalhe

--- a/html/novidades2.html
+++ b/html/novidades2.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 <head>
-    <title>Jonas Botelho - novida10</title>
+    <title>Jonas Botelho - novidades</title>
     <link rel="stylesheet" href="../css/jonasbotelho2.css">
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
