--- a/html/oqueosfasdizem2.html
+++ b/html/oqueosfasdizem2.html
@@ -1,96 +1,106 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <meta charset="UTF-8">
-    <meta name = "viewport" content = "width=device-width">
-    <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width">
 
-        <title>Jonas Botelho - o que os fãs dizem</title>
-        <link rel = "stylesheet" href = "../css/jonasbotelho2.css">
-        <link rel = "stylesheet" href = "../css/reset.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <h1 class = "titulo">JONAS AMAZONAS BOTELHO</h1>
-            <div class = "menu">
-                <nav>
-                    <ul>
-                        <input type="button" onclick="window.open ('vidaeobra2.html');" value="Vida e Obra" class="vidaeobra">
-                        <input type="button" onclick="window.open ('oqueosfasdizem2.html');" value="O que os fãs dizem" class="fasdizem">
-                        <input type="button" onclick="window.open ('novidades2.html');" value="Novidades" class="novidades">
-                    </ul>        
-                </nav>
-            </div>
-        </header>
-        <main>
-            <h2 class = "fasdizemtitulopg3">O que os fãs dizem</h2>
-            <div class = "fasdizem-1">
-                <h3 class = "nome">Giovana</h3>
-                <img src ="../imagens/fas1.png" class ="fas-ft1">
-                <p class = "fasdizemtexto-1">
-                    "Ao Sr. Jonas Botelho:<br>
-                    O melhor cover de Leonardo;<br>
-                    Customizador de capas de álbuns;<br>
-                    Prolífico da literatura lasciva;<br>
-                    Mestre do voleibol;<br>
-                    Designer gráfico para eventos;<br>
-                    Que elogiava miha voz nos tempos de telefone fixo;<br>
-                    Sempre tem iogurte na geladeira;<br>
-                    Genitor do maior amor da minha vida.<br>
-                    Que sua vida continue trazendo atividades aleatórias e conquistas incomuns por muitos e muitos anos!"
-                </p>
-            </div>
-            <div class = "fasdizem-2">
-                <h3 class = "nome">Gabriel</h3>
-                <img src ="../imagens/fas2.png" class ="fas-ft2">
-                <p class = "fasdizemtexto-2">
-                    "Mal conheço e já considero pacas!"
-                </p>
-            </div>
-            <div class = "fasdizem-3">
-                <h3 class = "nome">Gustavo</h3>
-                <img src ="../imagens/fas3.png" class ="fas-ft3">
-                <p class = "fasdizemtexto-3">
-                    "Johnny Love: excelente marido, esplêndido pai, amante das artes, transcreve um mix de sentimentos a cada nova obra literária."
-                </p>
-            </div>
-            <div class = "fasdizem-4">
-                <h3 class = "nome">Eduardo</h3>
-                <img src ="../imagens/fas4.png" class ="fas-ft4">
-                <p class = "fasdizemtexto-4">
-                    "Jonas me inspira.<br>
-                    Jonas cria a partir de seu coração.<br>
-                    Jonas capta a poesia onírica de viver, a vida e o amor da forma mais crua e humana.<br>
-                    Jonas dá amor ao ato de criar, ao ato de fazer existir. Jonas dá amor à safadeza.<br>
-                    Jonas cria a magia da sedução da forma mais doce, como a voz de uma ninfa, deusa da natureza, que me pega em seus braços e no toque suave e molhado de um beijo, me faz
-                    delirar.<br>
-                    Jonas é meu herói da escrita."
-                </p>
-            </div>
-            <div class = "fasdizem-5">
-                <h3 class = "nome">Eduardo</h3>
-                <img src ="../imagens/fas5.png" class ="fas-ft5">
-                <p class = "fasdizemtexto-5">
-                    "Meu tio Jonas!"
-                </p>
-            </div>
-            <div class = "fasdizem-6">
-                <h3 class = "nome">Cristiane</h3>
-                <img src ="../imagens/fas6.png" class ="fas-ft6">
-                <p class = "fasdizemtexto-6">
-                    "Johnny pessoa rara! Coração gigante e mais puro que já conheci.<br>
-                    Tem inúmeras habilidades: escritor, pintor, escultor, desenhista, marceneiro, eletricista, carpinteiro, etc...<br>
-                    E a qualidade maior é ser o melhor marido e pai."
-                </p>
-            </div>
-        </main>
-        <footer>
-            <div class = "autor">
-                <p>Realizado pela filha coruja: Stephannie Wolff</p>        
-                <p>26 de Julho de 2022</p>
-            </div>
-        </footer>
-    </body>
+<head>
+
+    <title>Jonas Botelho - o que os fãs dizem</title>
+    <link rel="stylesheet" href="../css/jonasbotelho2.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <h1 class="titulo">JONAS AMAZONAS BOTELHO</h1>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <input type="button" onclick="window.open ('vidaeobra2.html');" value="Vida e Obra"
+                        class="vidaeobra">
+                    <input type="button" onclick="window.open ('oqueosfasdizem2.html');" value="O que os fãs dizem"
+                        class="fasdizem">
+                    <input type="button" onclick="window.open ('novidades2.html');" value="Novidades" class="novidades">
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <h2 class="fasdizemtitulopg3">O que os fãs dizem</h2>
+        <div class="fasdizem-1">
+            <h3 class="nome">Giovana</h3>
+            <img src="../imagens/fas1.png" class="fas-ft1">
+            <p class="fasdizemtexto-1">
+                "Ao Sr. Jonas Botelho:<br>
+                O melhor cover de Leonardo;<br>
+                Customizador de capas de álbuns;<br>
+                Prolífico da literatura lasciva;<br>
+                Mestre do voleibol;<br>
+                Designer gráfico para eventos;<br>
+                Que elogiava miha voz nos tempos de telefone fixo;<br>
+                Sempre tem iogurte na geladeira;<br>
+                Genitor do maior amor da minha vida.<br>
+                Que sua vida continue trazendo atividades aleatórias e conquistas incomuns por muitos e muitos anos!"
+            </p>
+        </div>
+        <div class="fasdizem-2">
+            <h3 class="nome">Gabriel</h3>
+            <img src="../imagens/fas2.png" class="fas-ft2">
+            <p class="fasdizemtexto-2">
+                "Mal conheço e já considero pacas!"
+            </p>
+        </div>
+        <div class="fasdizem-3">
+            <h3 class="nome">Gustavo</h3>
+            <img src="../imagens/fas3.png" class="fas-ft3">
+            <p class="fasdizemtexto-3">
+                "Johnny Love: excelente marido, esplêndido pai, amante das artes, transcreve um mix de sentimentos a
+                cada nova obra literária."
+            </p>
+        </div>
+        <div class="fasdizem-4">
+            <h3 class="nome">Eduardo</h3>
+            <img src="../imagens/fas4.png" class="fas-ft4">
+            <p class="fasdizemtexto-4">
+                "Jonas me inspira.<br>
+                Jonas cria a partir de seu coração.<br>
+                Jonas capta a poesia onírica de viver, a vida e o amor da forma mais crua e humana.<br>
+                Jonas dá amor ao ato de criar, ao ato de fazer existir. Jonas dá amor à safadeza.<br>
+                Jonas cria a magia da sedução da forma mais doce, como a voz de uma ninfa, deusa da natureza, que me
+                pega em seus braços e no toque suave e molhado de um beijo, me faz
+                delirar.<br>
+                Jonas é meu herói da escrita."
+            </p>
+        </div>
+        <div class="fasdizem-5">
+            <h3 class="nome">Eduardo</h3>
+            <img src="../imagens/fas5.png" class="fas-ft5">
+            <p class="fasdizemtexto-5">
+                "Meu tio Jonas!"
+            </p>
+        </div>
+        <div class="fasdizem-6">
+            <h3 class="nome">Cristiane</h3>
+            <img src="../imagens/fas6.png" class="fas-ft6">
+            <p class="fasdizemtexto-6">
+                "Johnny pessoa rara! Coração gigante e mais puro que já conheci.<br>
+                Tem inúmeras habilidades: escritor, pintor, escultor, desenhista, marceneiro, eletricista, carpinteiro,
+                etc...<br>
+                E a qualidade maior é ser o melhor marido e pai."
+            </p>
+        </div>
+    </main>
+    <footer>
+        <div class="autor">
+            <p>Realizado pela filha coruja: Stephannie Wolff</p>
+            <p>26 de Julho de 2022</p>
+        </div>
+    </footer>
+</body>
+
 </html>
